--- a/sass/_home.scss
+++ b/sass/_home.scss
@@ -127,16 +127,10 @@
 
   /* TABLET ≤ 992px */
   @media(max-width:1200px){
-    .shape-1{
-      left: 100px;
-    width: 50%;
-    height: 10%;
+    .shape{
+    display: none;
     }
-     .shape-2{
-      right: 50px;
-    width: 50%;
-    height: 10%;
-    }
+   
   }
   @media (max-width: 992px) {
     &__container {
@@ -174,9 +168,7 @@
       }
       .shape-1,
       .shape-2 {
-          right: 10px;
-    width: 10%;
-    height: 10%;
+         display: none;
     
       }
     }
