--- a/sass/main.css
+++ b/sass/main.css
@@ -117,8 +117,8 @@ body.dark .mobile-menu {
   position: fixed;
   top: 0;
   background: rgba(255, 255, 255, 0.6); /* 60% shaffof */
-  -webkit-backdrop-filter: blur(10px);
-          backdrop-filter: blur(10px); /* ixtiyoriy — fonga blur */
+  -webkit-backdrop-filter: blur(50px);
+          backdrop-filter: blur(50px); /* ixtiyoriy — fonga blur */
   z-index: 1000;
 }
 .navbar .navbar-links {
@@ -359,15 +359,8 @@ body.dark .mobile-menu {
   z-index: 1;
 }
 @media (max-width: 1200px) {
-  .hero .shape-1 {
-    left: 100px;
-    width: 50%;
-    height: 10%;
-  }
-  .hero .shape-2 {
-    right: 50px;
-    width: 50%;
-    height: 10%;
+  .hero .shape {
+    display: none;
   }
 }
 @media (max-width: 992px) {
@@ -398,9 +391,7 @@ body.dark .mobile-menu {
   }
   .hero__image-wrapper .shape-1,
   .hero__image-wrapper .shape-2 {
-    right: 10px;
-    width: 10%;
-    height: 10%;
+    display: none;
   }
 }
 @media (max-width: 576px) {
